--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
 
-<script src="js/firebase.js"></script>
-<script src="js/blog.js"></script>
+<script src="firebase.js"></script>
+<script src="blog.js"></script>
 </head>
 <body>
     <div class="banner"></div>
