--- a/editor.html
+++ b/editor.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
-<script src="js/firebase.js"></script>
-<script src="js/editor.js"></script>
+<script src="firebase.js"></script>
+<script src="editor.js"></script>
     <link type="stylesheet" href="css/editor.css">
 </head>
 <body>
