--- a/editor.html
+++ b/editor.html
@@ -8,7 +8,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
 <script src="firebase.js"></script>
 <script src="editor.js"></script>
-    <link type="stylesheet" href="css/editor.css">
+    <link type="stylesheet" href="editor.css">
 </head>
 <body>
     <div class="banner">
