--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
-
+<link rel="stylesheet" href="blog.css">
+    <link rel=stylesheet" href="home.css">
+    <link rel="stylesheet" href="editor.css">
 <script src="firebase.js"></script>
 <script src="blog.js"></script>
 </head>
